crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_simple_table_stops_at_div_closer_in_quote.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..49
  FENCED_DIV@0..42
    DIV_FENCE_OPEN@0..9
      TEXT@0..3 ":::"
      WHITESPACE@3..4 " "
      DIV_INFO@4..8
        TEXT@4..8 "note"
      NEWLINE@8..9 "\n"
    BLANK_LINE@9..10
      BLANK_LINE@9..10 "\n"
    BLOCK_QUOTE@10..38
      BLOCK_QUOTE_MARKER@10..11 ">"
      WHITESPACE@11..12 " "
      SIMPLE_TABLE@12..38
        TABLE_HEADER@12..19
          TABLE_CELL@12..13
            TEXT@12..13 "A"
          WHITESPACE@13..17 "    "
          TABLE_CELL@17..18
            TEXT@17..18 "B"
          NEWLINE@18..19 "\n"
        TABLE_SEPARATOR@19..29
          LINE_PREFIX@19..20 ">"
          LINE_PREFIX@20..21 " "
          TABLE_SEP_DASHES@21..24 "---"
          TABLE_SEP_WHITESPACE@24..25 " "
          TABLE_SEP_DASHES@25..28 "---"
          NEWLINE@28..29 "\n"
        TABLE_ROW@29..38
          LINE_PREFIX@29..30 ">"
          LINE_PREFIX@30..31 " "
          TABLE_CELL@31..32
            TEXT@31..32 "x"
          WHITESPACE@32..36 "    "
          TABLE_CELL@36..37
            TEXT@36..37 "y"
          NEWLINE@37..38 "\n"
    DIV_FENCE_CLOSE@38..42
      TEXT@38..41 ":::"
      NEWLINE@41..42 "\n"
  BLANK_LINE@42..43
    BLANK_LINE@42..43 "\n"
  PARAGRAPH@43..49
    TEXT@43..48 "after"
    NEWLINE@48..49 "\n"
