crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_table_caption_in_list_item_stops_at_sibling_marker.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..49
  LIST@0..49
    LIST_ITEM@0..42
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..4
        TEXT@2..3 "q"
        NEWLINE@3..4 "\n"
      BLANK_LINE@4..5
        BLANK_LINE@4..5 "\n"
      SIMPLE_TABLE@5..42
        TABLE_SEPARATOR@5..15
          TABLE_SEP_WHITESPACE@5..7 "  "
          TABLE_SEP_DASHES@7..10 "---"
          TABLE_SEP_WHITESPACE@10..11 " "
          TABLE_SEP_DASHES@11..14 "---"
          NEWLINE@14..15 "\n"
        TABLE_ROW@15..23
          WHITESPACE@15..17 "  "
          TABLE_CELL@17..18
            TEXT@17..18 "a"
          WHITESPACE@18..21 "   "
          TABLE_CELL@21..22
            TEXT@21..22 "b"
          NEWLINE@22..23 "\n"
        TABLE_SEPARATOR@23..33
          WHITESPACE@23..25 "  "
          TABLE_SEP_DASHES@25..28 "---"
          TABLE_SEP_WHITESPACE@28..29 " "
          TABLE_SEP_DASHES@29..32 "---"
          NEWLINE@32..33 "\n"
        BLANK_LINE@33..34
          BLANK_LINE@33..34 "\n"
        TABLE_CAPTION@34..42
          WHITESPACE@34..36 "  "
          TABLE_CAPTION_PREFIX@36..38 ": "
          TEXT@38..41 "cap"
          NEWLINE@41..42 "\n"
    LIST_ITEM@42..49
      LIST_MARKER@42..43 "-"
      WHITESPACE@43..44 " "
      PLAIN@44..49
        TEXT@44..48 "next"
        NEWLINE@48..49 "\n"
