crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_trailing_backslash_ends_block_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..15
  PARAGRAPH@0..10
    TEXT@0..3 "foo"
    HARD_LINE_BREAK@3..5 "\\\n"
    TEXT@5..9 "bar\\"
    NEWLINE@9..10 "\n"
  BLANK_LINE@10..11
    BLANK_LINE@10..11 "\n"
  PARAGRAPH@11..15
    TEXT@11..14 "baz"
    NEWLINE@14..15 "\n"
