crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_yaml_metadata_indent_below_code_threshold_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..36
  PARAGRAPH@0..5
    TEXT@0..4 "para"
    NEWLINE@4..5 "\n"
  BLANK_LINE@5..6
    BLANK_LINE@5..6 "\n"
  SIMPLE_TABLE@6..29
    TABLE_SEPARATOR@6..12
      TABLE_SEP_WHITESPACE@6..8 "  "
      TABLE_SEP_DASHES@8..11 "---"
      NEWLINE@11..12 "\n"
    TABLE_ROW@12..23
      WHITESPACE@12..14 "  "
      TABLE_CELL@14..22
        TEXT@14..22 "title: z"
      NEWLINE@22..23 "\n"
    TABLE_SEPARATOR@23..29
      TABLE_SEP_WHITESPACE@23..25 "  "
      TABLE_SEP_DASHES@25..28 "---"
      NEWLINE@28..29 "\n"
  BLANK_LINE@29..30
    BLANK_LINE@29..30 "\n"
  PARAGRAPH@30..36
    TEXT@30..35 "after"
    NEWLINE@35..36 "\n"
